Add missing header to CMakeLists.txt

--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -26,7 +26,8 @@ include_directories(${LIBSWRESAMPLE_INCLUDE_DIRS})
 add_definitions(${LIBSWRESAMPLE_DEFINITIONS})
 
 set(obs-ffmpeg_HEADERS
-	obs-ffmpeg-formats.h)
+	obs-ffmpeg-formats.h
+	obs-ffmpeg-compat.h)
 set(obs-ffmpeg_SOURCES
 	obs-ffmpeg.c
 	obs-ffmpeg-aac.c
