Add IObsPlugin interfaces for Video Source Plugins

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -227,7 +227,8 @@ set(libobs_libobs_HEADERS
 	obs-source.h
 	obs-output.h
 	obs-ffmpeg-compat.h
-	obs.hpp)
+	obs.hpp
+	obs-plugin.hpp)
 
 set(libobs_SOURCES
 	${libobs_callback_SOURCES}
