Implement status bar
The status bar now displays:
 - Auto-reconnect information (reconnecting and reconnect success)
 - Dropped frames (as well as percentage of total video frames)
 - Duration of session
 - CPU usage of the program
 - Kbp/s

The OBSBasic class is getting a bit big, so I separated out the
status bar code to its own class derived from QStatusBar.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -57,6 +57,7 @@ set(obs_SOURCES
 	window-basic-settings.cpp
 	window-basic-properties.cpp
 	window-basic-source-select.cpp
+	window-basic-status-bar.cpp
 	window-basic-transform.cpp
 	window-basic-preview.cpp
 	window-namedialog.cpp
@@ -73,6 +74,7 @@ set(obs_HEADERS
 	window-basic-settings.hpp
 	window-basic-properties.hpp
 	window-basic-source-select.hpp
+	window-basic-status-bar.hpp
 	window-basic-transform.hpp
 	window-basic-preview.hpp
 	window-namedialog.hpp
