--- a/plugins/image-source/CMakeLists.txt
+++ b/plugins/image-source/CMakeLists.txt
@@ -9,3 +9,4 @@ target_link_libraries(image-source
 	libobs)
 
 install_obs_plugin(image-source)
+install_obs_plugin_data(image-source ../../build/data/obs-plugins/image-source)
