Add forgotten obs.hpp header to CMakeLists

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -224,7 +224,8 @@ set(libobs_libobs_HEADERS
 	obs-scene.h
 	obs-source.h
 	obs-output.h
-	obs-ffmpeg-compat.h)
+	obs-ffmpeg-compat.h
+	obs.hpp)
 
 set(libobs_SOURCES
 	${libobs_callback_SOURCES}
