Move mac display capture to mac-capture module
It was kind of silly that it was residing within the test-input module.

--- a/test/test-input/CMakeLists.txt
+++ b/test/test-input/CMakeLists.txt
@@ -2,26 +2,7 @@ project(test-input)
 
 include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
-if(APPLE)
-	set(test-input_PLATFORM_SOURCES
-		test-desktop.m)
-
-	set_source_files_properties(test-desktop.m
-		PROPERTIES LANGUAGE C
-			COMPILE_FLAGS "-fobjc-arc")
-
-	find_library(IOSURF IOSurface)
-	include_directories(${IOSURF})
-	mark_as_advanced(${IOSURF})
-
-	find_library(COCOA Cocoa)
-	include_directories(${COCOA})
-	mark_as_advanced(${COCOA})
-
-	set(test-input_PLATFORM_DEPS
-		${IOSURF}
-		${COCOA})
-elseif(WIN32)
+if(WIN32)
 	set(test-input_PLATFORM_DEPS
 		w32-pthreads)
 endif()
